# video-transcriber-mcp-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml
src/: lib.rs  main.rs
src/mcp/: server.rs  server_rmcp.rs
src/transcriber/: audio.rs  downloader.rs  engine.rs  mod.rs  types.rs  whisper.rs  youtube.rs
