[package]
authors = ["nhatvu148"]
categories = ["multimedia::audio", "multimedia::video"]
description = "High-performance video transcription MCP server using whisper.cpp for faster transcription"
edition = "2024"
keywords = ["whisper", "transcription", "mcp", "video", "audio"]
license = "MIT"
name = "video-transcriber-mcp"
repository = "https://github.com/nhatvu148/video-transcriber-mcp-rs"
version = "0.3.0"

[[bin]]
name = "video-transcriber-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-process = "2.5"
axum = "0.8"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
home = "0.5"
reqwest = {version = "0.12", features = ["json", "rustls-tls"], default-features = false}
rmcp = {version = "0.12", features = ["server", "transport-io", "transport-streamable-http-server"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempfile = "3.24"
thiserror = "2.0"
tokio = {version = "1.49", features = ["full"]}
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
walkdir = "2.5"
whisper-rs = "0.15"

[dev-dependencies]
criterion = "0.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
